[package]
name = "double-dyn"
version = "0.1.0"
edition = "2021"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "Macro for implementing functions with multiple dynamic argument dispatch"
repository = "https://github.com/luketpeterson/double-dyn/"
readme = "README.md"
keywords = ["multimethods", "multimethod", "dyn", "argument", "dispatch", "multiple", "dynamic", "parameters", "arguments", "object", "oriented", "object-oriented"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
double-dyn-macros = {path = "./double-dyn-macros", version = "0.1.0"}

