[package]
name = "double-dyn"
version = "0.1.1"
edition = "2021"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "Macro for implementing functions with multiple dynamic argument dispatch"
repository = "https://github.com/luketpeterson/double_dyn/"
readme = "README.md"
keywords = ["multimethod", "multiple", "dyn", "dispatch", "object-oriented"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.*"
quote = "^1.0"
heck = "0.4.0"
